--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,3 @@
-# Docker
-# Build and push an image to Azure Container Registry
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 trigger:
 - main
 
@@ -9,15 +5,11 @@ resources:
 - repo: self
 
 variables:
-  # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: 'ddbbb373-47cf-4d39-88c4-f53d3b8c8d9f'
   imageRepository: 'tpexercisehelloworld'
   containerRegistry: 'tpexerciseregistry.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
   tag: '$(Build.BuildId)'
-
-  # Agent VM image name
-  vmImageName: 'frank-laptop'
 
 stages:
 - stage: Build
@@ -26,7 +18,7 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      vmImage: $(vmImageName)
+      name: "Default"
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
