--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,10 +18,6 @@ variables:
   tag: '$(Build.BuildId)'
   imagePullSecret: 'tpexerciseregistry214433eb-auth'
 
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
-
-
 stages:
 - stage: Build
   displayName: Build stage
@@ -52,7 +48,7 @@ stages:
   - deployment: Deploy
     displayName: Deploy
     pool:
-      pool: "Default"
+      name: "Default"
     environment: 'FrankCalitpexercise.tp-exercise'
     strategy:
       runOnce:
