--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: tpexercisehelloworld
-          image: tpexerciseregistry.azurecr.io/tpexercisehelloworld:11
+          image: tpexerciseregistry.azurecr.io/tpexercisehelloworld:latest
           ports:
             - containerPort: 8080
       tolerations:
