Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,9 +8,7 @@ trigger:
       - main
   paths:
     include:
-      - 'manifests/**'
-    exclude:
-      - '*/*'
+      - 'src/manifests/**'
 
 resources:
 - repo: self
